<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".ui.menu.MenuActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_greeting"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/text_menu_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/iv_versus_computer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/iv_versus_computer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginVertical="16dp"
        android:src="@drawable/ic_vs_computer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iv_versus_player"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_versus_computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/text_player_vs_computer"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/iv_versus_computer"
        app:layout_constraintRight_toRightOf="@id/iv_versus_computer"
        app:layout_constraintTop_toBottomOf="@+id/iv_versus_computer" />

    <ImageView
        android:id="@+id/iv_versus_player"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginVertical="16dp"
        android:src="@drawable/ic_vs_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/iv_versus_computer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_versus_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/text_player_vs_player"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/iv_versus_player"
        app:layout_constraintRight_toRightOf="@id/iv_versus_player"
        app:layout_constraintTop_toBottomOf="@+id/iv_versus_player" />
</androidx.constraintlayout.widget.ConstraintLayout>