<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:padding="10dp"
        android:text="@string/text_rock_paper_scissors"
        android:textColor="@color/design_default_color_primary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/text_vs"
        android:textColor="@color/design_default_color_error"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_player_1"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ll_player_one"
        app:layout_constraintRight_toRightOf="@id/ll_player_one" />

    <TextView
        android:id="@+id/tv_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_player_2"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ll_player_two"
        app:layout_constraintLeft_toLeftOf="@id/ll_player_two" />

    <LinearLayout
        android:id="@+id/ll_player_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/iv_restart"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_rock"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginVertical="20dp"
            android:src="@drawable/ic_new_rock" />

        <ImageView
            android:id="@+id/iv_paper"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginVertical="20dp"
            android:src="@drawable/ic_new_paper" />

        <ImageView
            android:id="@+id/iv_scissors"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginVertical="20dp"
            android:src="@drawable/ic_new_scissors" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_player_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/iv_restart"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_rock_player2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_new_rock"
            android:layout_marginVertical="20dp" />

        <ImageView
            android:id="@+id/iv_paper_player2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginVertical="20dp"
            android:src="@drawable/ic_new_paper" />

        <ImageView
            android:id="@+id/iv_scissors_player2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginVertical="20dp"
            android:src="@drawable/ic_new_scissors" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_restart"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginVertical="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_new_restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>